fix contrast violation on date

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,7 +71,7 @@ header a:focus, .article a:focus {
 
 .date {
     float: right;
-    color: #999;
+    color: #767676;
     font-style: italic;
 }
 
